--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "rust_chain"
 version = "0.1.0"
-edition = "2025"
+edition = "2024"
 
 [dependencies]
 sha2 = "0.10"
-ed25519-dalek = "2.0"
+ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
 rand = "0.8"
 hex = "0.4"
+serde = { version = "1.0", features = ["derive"] }
