--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
 rand = "0.8"
 hex = "0.4"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
