--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ rand = "0.8"
 hex = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tokio = { version = "1.0", features = ["full"] }
+warp = "0.3"
+reqwest = { version = "0.11", features = ["json"] }
