--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
 warp = "0.3"
 reqwest = { version = "0.11", features = ["json"] }
+bip32 = { version = "0.5.3", features = ["alloc"] }
+bip39 = { version = "2.2.0", features = ["alloc"] }
